fix overflow on smaller screen

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -174,7 +174,7 @@ body {
       margin-bottom: 20px;
       font-weight: 700;
       text-overflow: ellipsis;
-      overflow-x: hidden;
+      overflow: hidden;
     }
   
     p {
